--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -26,7 +26,7 @@
   background-size: cover;
   background-position: center;
 }
-.search-form {
+#search-form {
   background-color: #3550cb;
   display: flex;
   align-items: center;
