--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -8,7 +8,12 @@
   />
   <button class="search-button" type="submit">Search</button>
 </form>
-<div class="gallery">
-  <!-- Картки зображень -->
+<div class="container">
+  <div class="gallery">
+    <!-- Картки зображень -->
+  </div>
+  
+
+  <button type="button" class="load-more">Load more</button>
 </div>
-<button type="button" class="load-more">Load more</button>
+
